# utils

./: CMakeLists.txt  utils.cpp  utils.h
include/: class_enum  constexpr_strlen  endianness  istring  scoped_lock  string_trim  switchstr  template_pack_size  utils.h
include/utils/: class_enum  constexpr_strlen  endianness.hpp  istring  string_join  string_trim  template_pack_size  utils_exports.h  utils_osdetector
src/: utils.cpp  utils_exports.cpp
